--- a/index.html
+++ b/index.html
@@ -3,8 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Hoolo</title>
-  <button>день</button>
-  <button>авто</button>
-  <button>неон</button>
+    <link rel="stylesheet" href="./style.css">
+    <title>Сложно сосредоточиться</title>
+</head>
+
+
+<body>
+    <div class="container">
+        <main>
+            <div class="header">
+                <nav class="navigation">
+                    <button>день</button>
+                    <button>авто</button>
+                    <button>неон</button>
+                </nav>
+                <p class="knpkREC">REC</p>
+                <div class="KNPK1"></div>
+                <div class="KNPK2"></div>
+                <div class="KNPK3"></div>
+                <h1>no focus</h1>
+                <div class="p1">
+                    Что делать, когда не можешь делать ничего<br> 
+                    Или почему нам так сложно сконцентрироваться,<br>
+                    особенно когда очень надо
+                </div>
+            </div>
+            
+        
