--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
                     <button>авто</button>
                     <button>неон</button>
                 </nav>
-                <p class="knopkaREC">REC</p>
-                <div class="Knp1"></div>
-                <div class="Knp2"></div>
-                <div class="Knp3"></div>
+                <p class="REC">REC</p>
                 <h1>no focus</h1>
                 <div class="p1">
                     Что делать, когда не можешь делать ничего<br> 
@@ -32,7 +29,3 @@
     </body>
 </header>
 <main class="no_focus_hard">
-
-</main>
-
-        
