--- a/index.html
+++ b/index.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>No Focus</title>
-</head>
+  </head>
 
-<header>
+  <header>
     <body>
-        <div class="container">
-            <div class="header">
-                <nav class="navigation">
-                    <button>день</button>
-                    <button>авто</button>
-                    <button>неон</button>
-                </nav>
-                <p class="REC">REC</p>
-                <h1>no focus</h1>
-                <div class="p1">
-                    Что делать, когда не можешь делать ничего<br> 
-                    Или почему нам так сложно сконцентрироваться,<br>
-                    особенно когда очень надо
-                </div>
-            </div>
-        
+      <div class="container">
+        <div class="header">
+          <nav class="navigation">
+            <button>день</button>
+            <button>авто</button>
+            <button class="isActiveButton">неон</button>
+          </nav>
+          <div class="rec-wrapper">
+            <p class="REC">REC</p>
+            <div class="ellipse"></div>
+          <div class="border1"></div>
+          <div class="border2"></div>
+          </div>
+          <h1>no focus</h1>
+          <div class="p1">
+            Что делать, когда не можешь делать ничего<br />
+            Или почему нам так сложно сконцентрироваться,<br />
+            особенно когда очень надо
+          </div>
         </div>
+      </div>
     </body>
-</header>
-<main class="no_focus_hard">
+  </header>
+  <main class="no_focus_hard"></main>
+</html>
