--- a/index.html
+++ b/index.html
@@ -6,31 +6,178 @@
     <link rel="stylesheet" href="./style.css" />
     <title>No Focus</title>
   </head>
-
-  <header>
-    <body>
-      <div class="container">
-        <div class="header">
-          <nav class="navigation">
-            <button>день</button>
-            <button>авто</button>
-            <button class="isActiveButton">неон</button>
-          </nav>
-          <div class="rec-wrapper">
-            <p class="REC">REC</p>
-            <div class="ellipse"></div>
-          <div class="border1"></div>
-          <div class="border2"></div>
+  <main>
+    <header>
+      <body>
+        <div class="container">
+          <div class="header">
+            <nav class="navigation">
+              <button>день</button>
+              <button>авто</button>
+              <button class="isActiveButton">неон</button>
+            </nav>
+            <div class="rec-wrapper">
+              <p class="REC">REC</p>
+              <div class="ellipse"></div>
+              <div class="border1"></div>
+              <div class="border2"></div>
+            </div>
+            <h1>no focus</h1>
+            <div class="p1">
+              Что делать, когда не можешь делать ничего<br />
+              Или почему нам так сложно сконцентрироваться,<br />
+              особенно когда очень надо
+            </div>
           </div>
-          <h1>no focus</h1>
-          <div class="p1">
-            Что делать, когда не можешь делать ничего<br />
-            Или почему нам так сложно сконцентрироваться,<br />
-            особенно когда очень надо
+        </div>
+      </body>
+    </header>
+    <section class="why-focus">
+      <div class="hard">
+        <h2>Почему сосредоточиться так сложно</h2>
+        <div class="stolb">
+          <div class="mnogo">
+            <h3>Многозадачность</h3>
+            <span class="text1"
+              >Особенно сложно сосредоточиться, когда задач много и все они —
+              важные. Где же легендарная многозадачность, когда она так нужна
+              вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
+              её просто не существует. Исследователи выяснили, что мозгу тяжело
+              концентрироваться даже на двух делах одновременно. А когда в поле
+              внимания попадает несколько важных задач, организм паникует и
+              выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы
+              работаем невнимательно: ошибаемся и быстро устаём.
+            </span>
+          </div>
+          <div class="dofamin">
+            <h4>Дофамин</h4>
+            <span class="text2">
+              С гормонами стресса всё понятно, но дальше — ещё интереснее. В
+              нашей невозможности сосредоточиться замешана и полная
+              противоположность стрессу — дофамин. Это вещество участвует в
+              системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся
+              от важной задачи на что-то более «приятное» для мозгов. Например,
+              смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы
+              чувствуем удовольствие. Получается замкнутый круг: чем больше
+              отвлекаешься, тем больше удовольствия получаешь.
+            </span>
           </div>
         </div>
       </div>
-    </body>
-  </header>
-  <main class="no_focus_hard"></main>
+    </section>
+    <section class="what-low">
+      <div class="focus">
+        <h5>Что снижает концентрацию внимания?</h5>
+        <div class="stroka">
+          <div class="mnogozad">
+            <h6>Многозадачность</h6>
+            <span class="text3"
+              >Как концентрация может снижаться из-за… концентрации? Любая
+              стрессовая ситуация (и резко меняющийся мир в целом) заставляет
+              наш мозг постоянно «сканировать» окружающую среду на предмет
+              опасности. Например, читать новости вместо работы. Но быть
+              собранными всё время — невозможно. Концентрация — мышца, и она
+              может не выдержать, если не давать ей отдохнуть.</span
+            >
+          </div>
+          <div class="food">
+            <h7>Еда</h7>
+            <span class="text4"
+              >«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
+              доставляют в мозг энергию и помогают ему лучше работать. Но уходит
+              эта энергия также быстро, как и приходит. А мы в результате
+              попадаем на «углеводные качели»: как только действие «быстрых
+              углеводов» заканчивается, мы чувствуем усталость и сонливость. И
+              хотим ещё больше быстрых углеводов.</span
+            >
+          </div>
+          <div class="gadget">
+            <h8>Гаджеты</h8>
+            <span class="text5"
+              >Да-да, это та самая ситуация, когда на экране ноутбука — код, в
+              наушниках — подкаст, а на компьютере фоном — ещё и видео с
+              забавными утятами. В результате мозг пытается переключиться с
+              одной задачи на другую — и просто не может. А чтобы вернуться к
+              состоянию полной концентрации, человеку в среднем нужно 20 минут.
+              Вот и получается, что чем больше времени мы проводим в гаджетах,
+              тем больше времени затем нужно, чтобы вернуться к работе.</span
+            >
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="how-conc">
+      <div class="better">
+        <h10
+          >Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
+          секунд)</h10
+        >
+        <div class="stolb2">
+          <div class="fift">
+            <h11>5 простых (на самом деле не очень) советов</h11>
+          </div>
+          <div class="pred">
+            <h12>Представьте небо и облака</h12>
+            <span class="text6"
+              >Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
+              успокоиться. Ведь часто именно тревожные мысли о сложных задачах
+              как раз и мешают эти сложные задачи делать. В такие моменты можно
+              закрыть глаза и представить, что чистое небо — это вы, а облака —
+              тревожные мысли. И сколько бы их ни было — ясное небо всегда будет
+              где-то там, за тучами, и никуда не денется. Это упражнение поможет
+              вернуться в настоящий момент, а не волноваться о потенциальных
+              проблемах из будущего.</span
+            >
+          </div>
+          <div class="on-mus">
+            <h13>Включите музыку</h13>
+            <span class="text7"
+              >Но не любую, и не любимую. Любимая может быть связана с сильными
+              положительными эмоциями, которые тоже очень сильно отвлекают.
+              Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
+              попробовать включить плейлист в «белым шумом» или
+              нейромузыкой.</span
+            >
+          </div>
+          <div class="walk">
+            <h14>Прогуляйтесь</h14>
+            <span class="text8"
+              >Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+              показал, что созерцание природы повышает концентрацию, в то время
+              как после просмотра городских пейзажей она наоборот понижается.
+              Можно совместить прогулку с физическими упражнениями или бегом —
+              так в мозг поступит ещё больше кислорода и он будет лучше
+              работать. Но и простая двадцатиминутная прогулка — тоже отличный
+              вариант.</span
+            >
+          </div>
+          <div class="good-eat">
+            <h15>Хорошо ешьте</h15>
+            <span class="text9"
+              >Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
+              которые препятствуют резким скачкам сахара в крови. Например, с
+              высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
+              чечевица, фасоль), коричневый рис, хлеб из цельнозерновой
+              пшеницы.</span
+            >
+          </div>
+          <div class="reed">
+            <h16>Читайте</h16>
+            <span class="text10"
+              >Настоящие бумажные книги. Это правда помогает с концентрацией:
+              чтобы прочитать пост в соцсети, достаточно нескольких минут или
+              даже секунд. А вот интересная книга способна затянуть и на
+              несколько часов и круто тренирует направленное внимание.</span
+            >
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="grids">
+    <div class="in-img">
+<h17>А можно в картинках?</h17>
+
+    </div>
+    </section>
+  </main>
 </html>
